--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "firebase": "^10.1.0",
     "framer-motion": "^11.15.0",
+    "groq-sdk": "^0.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux-persist": "^6.0.0"
