--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.1.0",
     "framer-motion": "^11.15.0",
     "groq-sdk": "^0.9.1",
+    "jspdf": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
