--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "react-markdown": "^9.0.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "react-simple-typewriter": "^5.0.1",
+    "react-typical": "^0.1.3",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
