--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.8.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   }
 }
