--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "chart.js": "^4.4.7",
     "firebase": "^10.1.0",
     "framer-motion": "^11.15.0",
     "groq-sdk": "^0.9.1",
     "jspdf": "^2.5.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
