--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "chart.js": "^4.4.7",
+    "file-saver": "^2.0.5",
     "firebase": "^10.1.0",
     "framer-motion": "^11.15.0",
     "groq-sdk": "^0.9.1",
