--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-simple-typewriter": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
