--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.15.0",
     "groq-sdk": "^0.9.1",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.524.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
