--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.1",
+    "lucide-react": "^0.524.0",
     "mongoose": "^7.8.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
