--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.1.0",
     "framer-motion": "^11.15.0",
     "groq-sdk": "^0.9.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.524.0",
     "react": "^18.2.0",
