--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
@@ -25,7 +26,7 @@
     "mongoose": "^7.8.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "uuid": "^11.0.5",
+    "uuid": "^11.1.0",
     "ws": "^8.18.0"
   }
 }
